Bug 319951 - In some circumstances deleting few items makes 'few_items - 1' invisible until refresh
Summary: In some circumstances deleting few items makes 'few_items - 1' invisible unti...
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: view-engine: details mode (other bugs)
Version First Reported In: 2.2
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-05-17 15:41 UTC by Aleh
Modified: 2013-07-25 20:28 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Aleh 2013-05-17 15:41:40 UTC
For instance if i delete 4 items, i won't see 3 last items in a list until i refresh. It's very inconvenient especially if sort by date. 

The very important is to be at the bottom.

Reproducible: Always

Steps to Reproduce:
1. Switch to detailed view
2. Scroll down to bottom
3. Choose some items to delete and delete them
Actual Results:  
At the bottom i see not all items until refresh

Expected Results:  
I see all items
Comment 1 Frank Reininghaus 2013-05-22 06:22:43 UTC
Thanks for the bug report! I can confirm the problem.
Comment 2 Emmanuel Pescosta 2013-07-11 16:23:29 UTC
@All:
Please test this patch https://git.reviewboard.kde.org/r/111486/ and maybe give some feedback, if it works for you too or if you find a regression (Hopefully not!). Thanks :)
Comment 3 Frank Reininghaus 2013-07-25 20:28:46 UTC
Git commit ba2c5c7193b66e035e4040401cb21ce294a0834e by Frank Reininghaus.
Committed on 25/07/2013 at 20:25.
Pushed by freininghaus into branch 'KDE/4.11'.

Fix maximum value for scroll bar when deleting items in Details View

The problem was that the view heigt minus the header height was
subtracted from maximumScrollOffset() to determine the maximum value
of the scroll offset of the top of the view.

However, the top of the view is the part that is hiden behind the
header. Therefore, the full view height must be subtracted from
maximumScrollOffset.

The remaining bits of bug 319951 were fixed by other recent commits.

Thanks to Emmanuel Pescosta for helping to track down the problem!
FIXED-IN: 4.11.0
REVIEW: 111486

M  +8    -1    dolphin/src/kitemviews/kitemlistcontainer.cpp

http://commits.kde.org/kde-baseapps/ba2c5c7193b66e035e4040401cb21ce294a0834e